make-a-wish-salesforce/src/objects/cg__ExternalFileMessage__c.object
<CustomObject>
    <fields>
        <fullName>cg__fileIds__c</fullName>
        <label>fileIds</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cg__fileObjectName__c</fullName>
        <label>fileObjectName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__namespace__c</fullName>
        <label>namespace</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__organizationId__c</fullName>
        <label>organizationId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__parentId__c</fullName>
        <label>parentId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__relationshipName__c</fullName>
        <label>relationshipName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__sDriveFolderId__c</fullName>
        <label>sDriveFolderId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>ExternalFileMessage</label>
    <nameField>
        <label>ExternalFileMessage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExternalFileMessages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>